--- a/equitania/views/eq_report_stockpicking_return.xml
+++ b/equitania/views/eq_report_stockpicking_return.xml
@@ -52,13 +52,19 @@
 							</div>
 							<div t-if="o.partner_id" name="partner_header">
 								<div t-field="o.company_id.partner_id.name" style="clear:left;" />
-								<div t-field="o.company_id.partner_id.street" />
+								<div t-if="o.company_id.partner_id.eq_name2" t-field="o.company_id.partner_id.eq_name2" style="clear:left;" />
+								<div>
+									<span t-field="o.company_id.partner_id.street"/><span t-if="o.company_id.partner_id.eq_house_no" t-field="o.company_id.partner_id.eq_house_no" style="margin-left:0.1cm;"/>
+								</div>
 								<div t-if="o.company_id.partner_id.street2">
 									<div t-field="o.company_id.partner_id.street2" />
 								</div>
 								<h>
 									<h t-field="o.company_id.partner_id.zip" />
 									<h t-field="o.company_id.partner_id.city" />
+									<h t-if="o.company_id.partner_id.eq_citypart">-
+										<h t-field="o.company_id.partner_id.eq_citypart"/>
+									</h>
 								</h>
 								<h t-field="o.company_id.partner_id.country_id.name" />
 							</div>
@@ -230,8 +236,27 @@
 										<span style="font-weight:bold;">Invoice address:</span>
 									</td>
 									<td>
-										<div t-field="o.sale_id.partner_invoice_id"
+										<!-- <div t-field="o.sale_id.partner_invoice_id"
 											t-field-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;], &quot;no_marker&quot;: true}" />
+											-->
+										<div>
+											<div t-field="o.sale_id.partner_invoice_id.name" style="clear:left;"/>
+											<div t-if="o.sale_id.partner_invoice_id.eq_name2" t-field="o.sale_id.partner_invoice_id.eq_name2" style="clear:left;"/>
+											<div>
+												<span t-field="o.sale_id.partner_invoice_id.street"/><span t-if="o.sale_id.partner_invoice_id.eq_house_no" t-field="o.sale_id.partner_invoice_id.eq_house_no" style="margin-left:0.1cm;"/>
+											</div>
+											<div t-if="o.sale_id.partner_invoice_id.street2">
+												<div t-field="o.sale_id.partner_invoice_id.street2"/>
+											</div>
+											<h>
+												<h t-field="o.sale_id.partner_invoice_id.zip"/>
+												<h t-field="o.sale_id.partner_invoice_id.city"/>
+												<h t-if="o.sale_id.partner_invoice_id.eq_citypart">-
+													<h t-field="o.sale_id.partner_invoice_id.eq_citypart"/>
+												</h>
+											</h>
+											<div t-field="o.sale_id.partner_invoice_id.country_id.name"/>
+										</div>
 									</td>
 								</tr>
 							</tbody>
