--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -24,20 +24,29 @@
 					</div>
 					<div t-if="o.partner_id.type != 'contact'">
 						<div t-field="o.partner_id.name" style="clear:left;"/>
-                        <div t-field="o.partner_id.street"/>
+						<div t-if="o.partner_id.eq_name2" t-field="o.partner_id.eq_name2" style="clear:left;"/>
+                        <div>
+                        	<span t-field="o.partner_id.street"/><span t-if="o.partner_id.eq_house_no" t-field="o.partner_id.eq_house_no" style="margin-left:0.1cm;"/>
+                       	</div>
                         <div t-if="o.partner_id.street2">
                	        	<div t-field="o.partner_id.street2"/>
                	        </div>
            	            <h>
        	                    <h t-field="o.partner_id.zip"/>
    	                        <h t-field="o.partner_id.city"/>
+   	                        <h t-if="o.partner_id.eq_citypart">-
+   	                        	<h t-field="o.partner_id.eq_citypart"/>
+   	                        </h>
                         </h>
                         <div t-field="o.partner_id.country_id.name"/>
                     </div>
 					<div t-if="o.partner_id.type == 'contact'">
 						<div t-field="o.partner_id.parent_id.name" style="clear:left;"/>
+						<div t-if="o.partner_id.parent_id.eq_name2" t-field="o.partner_id.parent_id.eq_name2" style="clear:left;"/>
    	                    <span t-field="o.partner_id.title.name"/> <span t-field="o.partner_id.eq_firstname" style="clear:left;"/> <span t-field="o.partner_id.name" style="clear:left;"/>
-	                    <div t-field="o.partner_id.street"/>
+                        <div>
+                        	<span t-field="o.partner_id.street"/><span t-if="o.partner_id.eq_house_no" t-field="o.partner_id.eq_house_no" style="margin-left:0.1cm;"/>
+                       	</div>
                         <div t-if="o.partner_id.street2">
                     		<div t-field="o.partner_id.street2"/>
                	        </div>
@@ -121,6 +130,14 @@
                                 </td>
                                 <td class="text-right">
                                     <span t-field="o.user_id.eq_employee_id.work_phone"/>
+                                </td>
+                            </tr>
+                            <tr t-if="o.user_id.eq_employee_id.eq_work_fax">
+                                <td>
+                                    <span>Fax</span>
+                                </td>
+                                <td class="text-right">
+                                    <span t-field="o.user_id.eq_employee_id.eq_work_fax"/>
                                 </td>
                             </tr>
                             <tr>
@@ -317,7 +334,10 @@
 									<!-- wenn keine Person (Rechnungsadresse ist kein Kontakt) -->
 									<div t-if="o.partner_invoice_id.type != 'contact'">
 										<div t-field="o.partner_invoice_id.name" style="clear:left;"/>
-							            <div t-field="o.partner_invoice_id.street"/>
+										<div t-if="o.partner_invoice_id.eq_name2" t-field="o.partner_invoice_id.eq_name2" style="clear:left;"/>
+							            <div>
+											<span t-field="o.partner_invoice_id.street"/><span t-if="o.partner_invoice_id.eq_house_no" t-field="o.partner_invoice_id.eq_house_no" style="margin-left:0.1cm;"/>
+										</div>
 				                        <div t-if="o.partner_invoice_id.street2">
 				                    		<div t-field="o.partner_invoice_id.street2"/>
 				                	    </div>
@@ -330,8 +350,11 @@
 									<!-- Rechnungsadresse IST Kontakt -->
 									<div t-if="o.partner_invoice_id.type == 'contact'">
 										<div t-field="o.partner_invoice_id.parent_id.name" style="clear:left;"/>
+										<div t-if="o.partner_invoice_id.parent_id.eq_name2" t-field="o.partner_invoice_id.parent_id.eq_name2" style="clear:left;"/>
 		    	                    	<span t-field="o.partner_invoice_id.title.name"/> <span t-field="o.partner_invoice_id.eq_firstname" style="clear:left;"/> <span t-field="o.partner_invoice_id.name" style="clear:left;"/>
-				                        <div t-field="o.partner_invoice_id.street"/>
+				                        <div>
+											<span t-field="o.partner_invoice_id.street"/><span t-if="o.partner_invoice_id.eq_house_no" t-field="o.partner_invoice_id.eq_house_no" style="margin-left:0.1cm;"/>
+										</div>
 				                        <div t-if="o.partner_invoice_id.street2">
 				                    		<div t-field="o.partner_invoice_id.street2"/>
 				                	    </div>
@@ -351,7 +374,10 @@
                             <td>
 								<div>
 									<div t-field="o.partner_shipping_id.name" style="clear:left;"/>
-									<div t-field="o.partner_shipping_id.street"/>
+									<div t-if="o.partner_shipping_id.eq_name2" t-field="o.partner_shipping_id.eq_name2" style="clear:left;"/>
+									<div>
+										<span t-field="o.partner_shipping_id.street"/><span t-if="o.partner_shipping_id.eq_house_no" t-field="o.partner_shipping_id.eq_house_no" style="margin-left:0.1cm;"/>
+									</div>
 									<div t-if="o.partner_shipping_id.street2">
 										<div t-field="o.partner_shipping_id.street2"/>
 									</div>
