--- a/equitania/views/eq_report_purchase_quotation.xml
+++ b/equitania/views/eq_report_purchase_quotation.xml
@@ -125,8 +125,10 @@
 				    <tr t-foreach="o.order_line" t-as="order_line">
 				        <td>
 				            <strong><span t-field="order_line.product_id.name"/></strong>
-				            <br/>
-				            <span t-field="order_line.name"/>
+				            <div t-if="order_line.name and order_line.name != ' ">
+					            <br/>
+					            <span t-field="order_line.name"/>
+				            </div>
 				        </td>
 				        <td class="text-center" t-if="o.show_delivery_date">
 				            <span t-field="order_line.get_delivery_date"/>
