--- a/equitania/views/eq_footer.xml
+++ b/equitania/views/eq_footer.xml
@@ -1,95 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
 <data>
-<template id="report.external_layout_footer">
-    <div class="footer">
-        <table class="header" style="border-bottom: 1px solid #999999; width: 100%">
-            <tr>
-                <td style="text-align:right;font-size:8pt; font-weight:bold;">Seite
-                    
-                    
-                    <span class="page"/> / 
-                    
-                    
-                    <span class="topage"/>
-                </td>
-            </tr>
-        </table>
-        <table class="footer" style="width: 100%;">
-            <tr>
-                <td style="">
-                    <span t-field="company.name"/>
-                </td>
-                <td style="">
-                    <span t-field="company.email"/>
-                </td>
-                <td style="">
-                    <span t-field="company.website"/>
-                </td>
-                <td style="">
-                    <div t-if="company.eq_custom_1 or company.eq_custom_2">Geschäftsführer</div>
-                    
-                </td>
-                <td rowspan="3" width="40" style="margin:0; padding:0;" margin="0" padding="0">
-                    <div id="version">Version 1.34
-                        <br/>13.05.2014
-                        <br/>EXTensions
-                    </div>
-                </td>
-                <td t-foreach="company.bank_ids" t-as="bank">
-                    <div t-if="bank.footer">
-                        <strong>Bank:</strong> <span t-field="bank.bank.name"/>
-                	</div>
-                </td>
-            </tr>
-            <tr>
-                <td style="">
-                    <span t-field="company.street"/>
-                </td>
-                <td style="">
-                    <div t-if="company.phone">
-                        Tel: <span t-field="company.phone"/>
-                    </div>
-                </td>
-                <td style="">
-                    <div t-if="company.vat">
-                        USt-IdNr. <span t-field="company.vat"/>
-                    </div>
-                </td>
-                <td style="">
-                    <span t-field="company.eq_custom_1"/>
-                </td>
-                <td t-foreach="company.bank_ids" t-as="bank">
-                    <div t-if="bank.footer">
-	                    <strong>BIC:</strong> <span t-field="bank.bank_bic"/>
-                	</div>
-                </td>
-            </tr>
-            <tr>
-                <td style="">
-                    <span t-field="company.zip"/>
-                    <span t-field="company.city"/>
-                </td>
-                <td style="">
-                    <div t-if="company.fax">
-                        Fax: <span t-field="company.fax"/>
-                    </div>
-                </td>
-                <td style="">
-                    <span t-field="company.company_registry"/>
-                </td>
-                <td style="">
-                    <span t-field="company.eq_custom_2"/>
-                </td>
-                <td t-foreach="company.bank_ids" t-as="bank">
-                    <div t-if="bank.footer">
-                        <strong>IBAN:</strong> <span t-field="bank.acc_number"/>
-                	</div>
-                </td>
-            </tr>
-        </table>
-        <!--<div class="text-center" style="border-top: 1px solid black;"><t t-if="company.custom_footer"><span t-raw="company.rml_footer"/></t><ul class="list-inline"><li>Page:</li><li><span class="page"/></li><li>/</li><li><span class="topage"/></li></ul></div>-->
-    </div>
+
+<template id="eq_external_layout_footer" inherit_id="report.external_layout_footer" active="True" customize_show="True">
+	<xpath expr="//div[@class='footer']" position="replace">
+	    <div class="footer">
+	        <table class="header" style="border-bottom: 1px solid #999999; width: 100%">
+	            <tr>
+	                <td style="text-align:right;font-size:8pt; font-weight:bold;">Seite
+	                    
+	                    
+	                    <span class="page"/> / 
+	                    
+	                    
+	                    <span class="topage"/>
+	                </td>
+	            </tr>
+	        </table>
+	        <table class="footer" style="width: 100%;">
+	            <tr>
+	                <td style="">
+	                    <span t-field="company.name"/>
+	                </td>
+	                <td style="">
+	                    <span t-field="company.email"/>
+	                </td>
+	                <td style="">
+	                    <span t-field="company.website"/>
+	                </td>
+	                <td style="">
+	                    <div t-if="company.eq_custom_1 or company.eq_custom_2">Geschäftsführer</div>
+	                    
+	                </td>
+	                <td rowspan="3" width="40" style="margin:0; padding:0;" margin="0" padding="0">
+	                    <div id="version">Version 1.34
+	                        <br/>13.05.2014
+	                        <br/>EXTensions
+	                    </div>
+	                </td>
+	                <td t-foreach="company.bank_ids" t-as="bank">
+	                    <div t-if="bank.footer">
+	                        <strong>Bank:</strong> <span t-field="bank.bank.name"/>
+	                	</div>
+	                </td>
+	            </tr>
+	            <tr>
+	                <td style="">
+	                    <span t-field="company.street"/>
+	                </td>
+	                <td style="">
+	                    <div t-if="company.phone">
+	                        Tel: <span t-field="company.phone"/>
+	                    </div>
+	                </td>
+	                <td style="">
+	                    <div t-if="company.vat">
+	                        USt-IdNr. <span t-field="company.vat"/>
+	                    </div>
+	                </td>
+	                <td style="">
+	                    <span t-field="company.eq_custom_1"/>
+	                </td>
+	                <td t-foreach="company.bank_ids" t-as="bank">
+	                    <div t-if="bank.footer">
+		                    <strong>BIC:</strong> <span t-field="bank.bank_bic"/>
+	                	</div>
+	                </td>
+	            </tr>
+	            <tr>
+	                <td style="">
+	                    <span t-field="company.zip"/>
+	                    <span t-field="company.city"/>
+	                </td>
+	                <td style="">
+	                    <div t-if="company.fax">
+	                        Fax: <span t-field="company.fax"/>
+	                    </div>
+	                </td>
+	                <td style="">
+	                    <span t-field="company.company_registry"/>
+	                </td>
+	                <td style="">
+	                    <span t-field="company.eq_custom_2"/>
+	                </td>
+	                <td t-foreach="company.bank_ids" t-as="bank">
+	                    <div t-if="bank.footer">
+	                        <strong>IBAN:</strong> <span t-field="bank.acc_number"/>
+	                	</div>
+	                </td>
+	            </tr>
+	        </table>
+	        <!--<div class="text-center" style="border-top: 1px solid black;"><t t-if="company.custom_footer"><span t-raw="company.rml_footer"/></t><ul class="list-inline"><li>Page:</li><li><span class="page"/></li><li>/</li><li><span class="topage"/></li></ul></div>-->
+	    </div>
+    </xpath>
 </template>
 </data>
 </openerp>
