--- a/equitania/views/eq_header.xml
+++ b/equitania/views/eq_header.xml
@@ -19,5 +19,22 @@
     </div>
     </xpath>
 </template>
+
+<template id="eq_external_layout_header_for_extra_info" active="True" customize_show="True">
+    <div class="header">
+        <div class="row zero_min_height">
+            <div>
+                <img t-if="company.eq_report_logo" t-att-src="'data:image/png;base64,%s' % company.eq_report_logo" style="margin-right:15px; float:right;" class="text-right"/>
+                <!--<img t-if="company.logo" t-att-src="'data:image/png;base64,%s' % company.logo" style="max-height: 2cm; margin-right:0.25cm; float:right;" class="text-right"/>-->
+            </div>
+        </div>
+        <div class="row zero_min_height">
+   			<t t-raw="0" />
+            <div class="col-xs-12">
+                <div style="font-size:6.5pt;text-decoration: underline;"/>
+                <!--<div style="border-bottom: 1px solid black;"/>--></div>
+        </div>
+    </div>
+</template>
 </data>
 </openerp>
