--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -8,8 +8,99 @@
 		    <div class="oe_structure"/>
 		    <div class="row"> EINTRAG ENDE-->
 		    
-<template id="eq_saleorder_extension" inherit_id="sale.report_saleorder_document" active="True">
-    <xpath expr="//div[@class='page']" position="replace">
+		    
+
+<template id="eq_external_layout_header_sale_order">
+    <div class="header">
+        <div class="row zero_min_height">
+            <div>
+                <img t-if="company.eq_report_logo" t-att-src="'data:image/png;base64,%s' % company.eq_report_logo" style="margin-right:15px; float:right;" class="text-right"/>
+                <!--<img t-if="company.logo" t-att-src="'data:image/png;base64,%s' % company.logo" style="max-height: 2cm; margin-right:0.25cm; float:right;" class="text-right"/>-->
+            </div>
+        </div>
+		<div class="row">
+			<div class="col-xs-7"/>
+	        <div class="col-xs-5">
+				<table style="width:100%;float:right;">
+				   	<tbody>
+		   				<tr>
+				           	<td>
+			               		<span>Customer no.</span>
+							</td>
+							<td class="text-right">
+			               		<span t-field="o.partner_id.eq_customer_ref" id="eq_customer_ref"/>
+			              	</td>
+						</tr>
+						<tr>
+							<td>
+								<span>Your reference no.</span>
+							</td>
+							<td class="text-right">
+								<span t-field="o.client_order_ref" />
+							</td>
+						</tr>
+			 			<tr>
+			                <td t-if="o.state not in ['draft','sent']">
+			                    <span>Order no.</span>
+			                </td>
+			                <td t-if="o.state in ['draft','sent']">
+			                    <span>Quotation no.</span>
+			                </td>					
+			                <td class="text-right">
+			                    <span t-field="o.name"/>
+			                </td>
+		               	</tr>
+		                <tr t-if="o.origin">
+		                    <td>
+		                        <span>Our reference no.</span>
+		                    </td>
+		                    <td class="text-right">
+		                        <span t-field="o.origin"/>
+		                    </td>
+		                </tr>
+		                <tr>
+		                    <td t-if="o.state not in ['draft','sent']">
+		                        <span>Order date</span>
+		                    </td>
+		                    <td t-if="o.state in ['draft','sent']">
+		                        <span>Quotation date</span>
+		                    </td>
+		                    <td class="text-right">
+		                        <span t-esc="o.date_order.split(' ')[0].split('-')[2] + '.' + o.date_order.split(' ')[0].split('-')[1] + '.' + o.date_order.split(' ')[0].split('-')[0]"/>
+		                    </td>
+		                </tr>
+		                <tr>
+		                    <td></td>
+		                </tr>
+		            </tbody>
+		        </table>
+			</div>
+		</div>
+        <div class="row zero_min_height">
+   			<t t-raw="0" />
+            <div class="col-xs-12">
+                <div style="font-size:6.5pt;text-decoration: underline;"/>
+                <!--<div style="border-bottom: 1px solid black;"/>--></div>
+        </div>
+    </div>
+</template>
+
+<template id="external_layout_sale_order">
+    <!-- Multicompany -->
+    <t t-if="o and 'company_id' in o">
+        <t t-set="company" t-value="o.company_id"></t>
+    </t>
+    <t t-if="not o or not 'company_id' in o">
+        <t t-set="company" t-value="res_company"></t>
+    </t>
+
+    <t t-call="equitania.eq_external_layout_header_sale_order" />
+    <t t-raw="0" />
+    <t t-call="report.external_layout_footer" />
+</template>
+		    
+<template id="sale.report_saleorder_document">
+	<t t-call="equitania.external_layout_sale_order">
 	    <div class="page">
 	        <div class="oe_structure"/>
             <div class="row">
@@ -61,61 +152,10 @@
 					</div>
 				</div>
                 <div class="col-xs-5">
-                	<table style="width:100%;float:right;">
-                    	<tbody>
-                        	<tr>
-                            	<td>
-                                	<span>Customer no.</span>
-                                </td>
-                                <td class="text-right">
-                                	<span t-field="o.partner_id.eq_customer_ref" id="eq_customer_ref"/>
-                               	</td>
-							</tr>
-							<tr>
-								<td>
-									<span>Your reference no.</span>
-								</td>
-								<td class="text-right">
-									<span t-field="o.client_order_ref" />
-								</td>
-							</tr>
-							<tr>
-                                <td t-if="o.state not in ['draft','sent']">
-                                    <span>Order no.</span>
-                                </td>
-                                <td t-if="o.state in ['draft','sent']">
-                                    <span>Quotation no.</span>
-                                </td>					
-                                <td class="text-right">
-                                    <span t-field="o.name"/>
-                                </td>
-                            </tr>
-                            <tr t-if="o.origin">
-                                <td>
-                                    <span>Our reference no.</span>
-                                </td>
-                                <td class="text-right">
-                                    <span t-field="o.origin"/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td t-if="o.state not in ['draft','sent']">
-                                    <span>Order date</span>
-                                </td>
-                                <td t-if="o.state in ['draft','sent']">
-                                    <span>Quotation date</span>
-                                </td>
-                                <td class="text-right">
-                                    <span t-esc="o.date_order.split(' ')[0].split('-')[2] + '.' + o.date_order.split(' ')[0].split('-')[1] + '.' + o.date_order.split(' ')[0].split('-')[0]"/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                            </tr>
-                        </tbody>
-                    </table>
                     <h style="line-height:3em" t-if="o.user_id.eq_employee_id">
                         <strong>For further information, please contact</strong>
+                    </h>
+                    <h style="line-height:0.5cm" t-if="o.user_id.eq_employee_id">
                     </h>
                     <table style="width:100%;" t-if="o.user_id.eq_employee_id">
                         <tbody>
@@ -399,7 +439,7 @@
 			<div id="informations" class="col-xs-12"/>
 			<div class="oe_structure"/>
 		</div>
-	</xpath>
+	</t>
 </template>
 
 <template id="report_saleorder">
