--- a/equitania/views/report_edit_equitania.xml
+++ b/equitania/views/report_edit_equitania.xml
@@ -23,7 +23,7 @@
 		<h>&#xa0;</h>
 	</xpath>
 </template>
-<template id="eq_saleorder_extension_sh" inherit_id="equitania.eq_saleorder_extension" active="True">
+<template id="eq_saleorder_extension_sh" inherit_id="sale.report_saleorder_document" active="True">
 	<xpath expr="//h[@t-field='o.partner_id.zip']" position="attributes">
 		<attribute name="style">margin-right:4px;</attribute>
 	</xpath>
