--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -6,8 +6,99 @@
         <div class="page">
         	<div class="row"> ALTER CONTENT ENDE (kopfinfos)-->
         
-<template id="eq_invoice_extension" inherit_id="account.report_invoice_document" active="True">
-    <xpath expr="//div[@class='page']" position="replace">
+<template id="eq_external_layout_header_invoice">
+    <div class="header">
+        <div class="row zero_min_height">
+            <div>
+                <img t-if="company.eq_report_logo" t-att-src="'data:image/png;base64,%s' % company.eq_report_logo" style="margin-right:15px; float:right;" class="text-right"/>
+                <!--<img t-if="company.logo" t-att-src="'data:image/png;base64,%s' % company.logo" style="max-height: 2cm; margin-right:0.25cm; float:right;" class="text-right"/>-->
+            </div>
+        </div>
+		<div class="row">
+			<div class="col-xs-7"/>
+	        <div class="col-xs-5">
+				<table style="width:100%">
+					<tbody>
+						<tr>
+							<td>
+								<span>Order no.</span>
+							</td>
+							<td class="text-right">
+								<span t-field="o.name"/>
+							</td>
+						</tr>
+						<tr t-if="o.type == 'in_invoice'">
+							<td>
+								<span>Supplier no.</span>
+							</td>
+							<td class="text-right">
+								<span t-field="o.partner_id.eq_creditor_ref" id="eq_creditor_ref"/>
+							</td>
+						</tr>
+						<tr t-if="o.type in ('out_invoice', 'in_refund', 'out_refund'">
+							<td>
+								<span>Customer no.</span>
+							</td>
+							<td class="text-right">
+								<span t-field="o.partner_id.eq_customer_ref" id="eq_customer_ref"/>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<span>Your reference no.</span>
+							</td>
+							<td class="text-right">
+								<span t-field="o.eq_ref_number" />
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<span>Invoice no.</span>
+							</td>
+							<td class="text-right">
+								<span t-field="o.number"/>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<span>Invoice date</span>
+							</td>
+							<td class="text-right">
+								<span t-field="o.date_invoice"/>
+							</td>
+						</tr>
+						<tr>
+							<td></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+        <div class="row zero_min_height">
+   			<t t-raw="0" />
+            <div class="col-xs-12">
+                <div style="font-size:6.5pt;text-decoration: underline;"/>
+                <!--<div style="border-bottom: 1px solid black;"/>--></div>
+        </div>
+    </div>
+</template>
+
+<template id="external_layout_invoice">
+    <!-- Multicompany -->
+    <t t-if="o and 'company_id' in o">
+        <t t-set="company" t-value="o.company_id"></t>
+    </t>
+    <t t-if="not o or not 'company_id' in o">
+        <t t-set="company" t-value="res_company"></t>
+    </t>
+
+    <t t-call="equitania.eq_external_layout_header_invoice" />
+    <t t-raw="0" />
+    <t t-call="report.external_layout_footer" />
+</template>
+
+<template id="account.report_invoice_document" active="True">
+    <t t-call="equitania.external_layout_invoice">
 	    <div class="page">
 	        <div class="oe_structure"/>
 	        <div class="row">
@@ -58,61 +149,6 @@
 					</div>
 				</div>
 				<div class="col-xs-5">
-					<table style="width:100%">
-						<tbody>
-							<tr>
-								<td>
-									<span>Order no.</span>
-								</td>
-								<td class="text-right">
-									<span t-field="o.name"/>
-								</td>
-							</tr>
-							<tr t-if="o.type == 'in_invoice'">
-								<td>
-									<span>Supplier no.</span>
-								</td>
-								<td class="text-right">
-									<span t-field="o.partner_id.eq_creditor_ref" id="eq_creditor_ref"/>
-								</td>
-							</tr>
-							<tr t-if="o.type == 'out_invoice' or 'in_refund' or 'out_refund'">
-								<td>
-									<span>Customer no.</span>
-								</td>
-								<td class="text-right">
-									<span t-field="o.partner_id.eq_customer_ref" id="eq_customer_ref"/>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<span>Your reference no.</span>
-								</td>
-								<td class="text-right">
-									<span t-field="o.eq_ref_number" />
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<span>Invoice no.</span>
-								</td>
-								<td class="text-right">
-									<span t-field="o.number"/>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<span>Invoice date</span>
-								</td>
-								<td class="text-right">
-									<span t-field="o.date_invoice"/>
-								</td>
-							</tr>
-							<tr>
-								<td></td>
-							</tr>
-						</tbody>
-					</table>
 					<h style="line-height:3em" t-if="o.user_id.eq_employee_id">
 						<strong>For further information, please contact</strong>
 					</h>
@@ -366,7 +402,7 @@
 			</div><!-- <p t-field="o.comment"/> -->
 			<div class="oe_structure"/>
         </div>
-    </xpath>
+    </t>
 </template>
 </data>
 </openerp>
