--- a/equitania/views/eq_report_purchase_order.xml
+++ b/equitania/views/eq_report_purchase_order.xml
@@ -1,8 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
 <data>
-<template id="eq_purchaseorder_extension" inherit_id="purchase.report_purchaseorder_document" active="True">
-    <xpath expr="//div[@class='page']" position="replace">
+<template id="eq_external_layout_header_purchase_order">
+    <div class="header">
+        <div class="row zero_min_height">
+            <div>
+                <img t-if="company.eq_report_logo" t-att-src="'data:image/png;base64,%s' % company.eq_report_logo" style="margin-right:15px; float:right;" class="text-right"/>
+                <!--<img t-if="company.logo" t-att-src="'data:image/png;base64,%s' % company.logo" style="max-height: 2cm; margin-right:0.25cm; float:right;" class="text-right"/>-->
+            </div>
+        </div>
+		<div class="row">
+			<div class="col-xs-7"/>
+	        <div class="col-xs-5">
+                <table style="width:100%; float:right;">
+                    <tbody>
+                        <tr>
+                            <td/>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span>Supplier no.</span>
+                            </td>
+                            <td class="text-right">
+                                <span t-field="o.partner_id.eq_creditor_ref" id="eq_creditor_ref"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span>Your order reference</span>
+                            </td>
+                            <td class="text-right">
+                                <span t-field="o.partner_ref"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span>Our order reference</span>
+                            </td>
+                            <td class="text-right">
+                                <span t-field="o.name"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span>Order date</span>
+                            </td>
+                            <td class="text-right">
+                                <span t-esc="o.date_order.split(' ')[0].split('-')[2] + '.' + o.date_order.split(' ')[0].split('-')[1] + '.' + o.date_order.split(' ')[0].split('-')[0]"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td/>
+                        </tr>
+                    </tbody>
+                </table>
+			</div>
+		</div>
+        <div class="row zero_min_height">
+   			<t t-raw="0" />
+            <div class="col-xs-12">
+                <div style="font-size:6.5pt;text-decoration: underline;"/>
+                <!--<div style="border-bottom: 1px solid black;"/>--></div>
+        </div>
+    </div>
+</template>
+
+<template id="external_layout_purchase_order">
+    <!-- Multicompany -->
+    <t t-if="o and 'company_id' in o">
+        <t t-set="company" t-value="o.company_id"></t>
+    </t>
+    <t t-if="not o or not 'company_id' in o">
+        <t t-set="company" t-value="res_company"></t>
+    </t>
+
+    <t t-call="equitania.eq_external_layout_header_purchase_order" />
+    <t t-raw="0" />
+    <t t-call="report.external_layout_footer" />
+</template>
+
+<template id="purchase.report_purchaseorder_document" active="True">
+    <t t-call="equitania.external_layout_purchase_order">
 	    <div class="page">
 	        <div class="oe_structure"/>
 	        <div class="row">
@@ -31,48 +109,6 @@
 	                <div t-field="o.partner_id.country_id.name"/>
 	            </div>
 	            <div class="col-xs-5">
-	                <table style="width:100%; float:right;">
-	                    <tbody>
-	                        <tr>
-	                            <td/>
-	                        </tr>
-	                        <tr>
-	                            <td>
-	                                <span>Supplier no.</span>
-	                            </td>
-	                            <td class="text-right">
-	                                <span t-field="o.partner_id.eq_creditor_ref" id="eq_creditor_ref"/>
-	                            </td>
-	                        </tr>
-	                        <tr>
-	                            <td>
-	                                <span>Your order reference</span>
-	                            </td>
-	                            <td class="text-right">
-	                                <span t-field="o.partner_ref"/>
-	                            </td>
-	                        </tr>
-	                        <tr>
-	                            <td>
-	                                <span>Our order reference</span>
-	                            </td>
-	                            <td class="text-right">
-	                                <span t-field="o.name"/>
-	                            </td>
-	                        </tr>
-	                        <tr>
-	                            <td>
-	                                <span>Order date</span>
-	                            </td>
-	                            <td class="text-right">
-	                                <span t-esc="o.date_order.split(' ')[0].split('-')[2] + '.' + o.date_order.split(' ')[0].split('-')[1] + '.' + o.date_order.split(' ')[0].split('-')[0]"/>
-	                            </td>
-	                        </tr>
-	                        <tr>
-	                            <td/>
-	                        </tr>
-	                    </tbody>
-	                </table>
 	                <h style="line-height:3em" t-if="o.eq_contact_person_id">
 	                    <strong>For further information, please contact</strong>
 	                </h>
@@ -295,7 +331,7 @@
 	        </div>
 	    <div class="oe_structure"/>
         </div>
-	</xpath>
+	</t>
 </template>
 </data>
 </openerp>
