--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -21,7 +21,7 @@
 		<div class="row">
 			<div class="col-xs-7"/>
 	        <div class="col-xs-5">
-				<table style="width:100%;float:right;">
+				<table style="width:100%;float:right">
 				   	<tbody>
 		   				<tr>
 				           	<td>
