--- a/equitania/views/eq_report_stockpicking.xml
+++ b/equitania/views/eq_report_stockpicking.xml
@@ -2,11 +2,91 @@
 <openerp>
 <data>
 
+
+<template id="eq_external_layout_header_stock_picking">
+    <div class="header">
+        <div class="row zero_min_height">
+            <div>
+                <img t-if="company.eq_report_logo" t-att-src="'data:image/png;base64,%s' % company.eq_report_logo" style="margin-right:15px; float:right;" class="text-right"/>
+                <!--<img t-if="company.logo" t-att-src="'data:image/png;base64,%s' % company.logo" style="max-height: 2cm; margin-right:0.25cm; float:right;" class="text-right"/>-->
+            </div>
+        </div>
+		<div class="row">
+			<div class="col-xs-7"/>
+	        <div class="col-xs-5">
+				<table style="width:100%;float:right;">
+					<tbody>
+						<tr>
+							<td>
+								<span>Customer no.</span>
+							</td>
+							<td class="text-right">
+								<span t-field="o.partner_id.eq_customer_ref" id="eq_customer_ref"/>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<strong><span>Your reference no.</span></strong>
+							</td>
+							<td class="text-right">
+								<strong><span t-field="o.eq_ref_number" /></strong>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<span>Commitment Date</span>
+							</td>
+							<td class="text-right" t-if="o.date">
+								<span t-esc="o.date.split(' ')[0].split('-')[2] + '.' + o.date.split(' ')[0].split('-')[1] + '.' + o.date.split(' ')[0].split('-')[0]"/>
+								<!-- <span t-esc="o.date.split(' ')[0]"/>-->
+							</td>
+						</tr>
+						<tr t-if="o.date_done and o.state == 'done'">
+							<td>
+								<span>Delivery Date</span>
+							</td>
+							<td class="text-right" t-if="o.date_done">
+								<span t-esc="o.date_done.split(' ')[0].split('-')[2] + '.' + o.date_done.split(' ')[0].split('-')[1] + '.' + o.date_done.split(' ')[0].split('-')[0]"/>
+							</td>
+						</tr>
+						<tr>
+							<td/>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+        <div class="row zero_min_height">
+   			<t t-raw="0" />
+            <div class="col-xs-12">
+                <div style="font-size:6.5pt;text-decoration: underline;"/>
+                <!--<div style="border-bottom: 1px solid black;"/>--></div>
+        </div>
+    </div>
+</template>
+
+
+<template id="external_layout_stock_picking">
+    <!-- Multicompany -->
+    <t t-if="o and 'company_id' in o">
+        <t t-set="company" t-value="o.company_id"></t>
+    </t>
+    <t t-if="not o or not 'company_id' in o">
+        <t t-set="company" t-value="res_company"></t>
+    </t>
+
+    <t t-call="equitania.eq_external_layout_header_stock_picking" />
+    <t t-raw="0" />
+    <t t-call="report.external_layout_footer" />
+</template>
+
 <!-- 
 <template id="eq_report_picking_extension" inherit_id="stock.report_picking" active="True">
  -->
- <template id="eq_report_picking_extension" inherit_id="delivery.report_shipping2" active="True">
-	<xpath expr="//div[@class='page']" position="replace">
+ <template id="stock.report_picking" active="True">
+    <t t-call="report.html_container">
+    <t t-foreach="docs" t-as="o">
+	<t t-call="equitania.external_layout_stock_picking">
 		<div class="page">	
 			<div class="oe_structure"/>
 			<div class="row">
@@ -53,46 +133,6 @@
 					</div>
 				</div>
 				<div class="col-xs-5">
-					<table style="width:100%;float:right;">
-						<tbody>
-							<tr>
-								<td>
-									<span>Customer no.</span>
-								</td>
-								<td class="text-right">
-									<span t-field="o.partner_id.eq_customer_ref" id="eq_customer_ref"/>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<strong><span>Your reference no.</span></strong>
-								</td>
-								<td class="text-right">
-									<strong><span t-field="o.eq_ref_number" /></strong>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<span>Commitment Date</span>
-								</td>
-								<td class="text-right" t-if="o.date">
-									<span t-esc="o.date.split(' ')[0].split('-')[2] + '.' + o.date.split(' ')[0].split('-')[1] + '.' + o.date.split(' ')[0].split('-')[0]"/>
-									<!-- <span t-esc="o.date.split(' ')[0]"/>-->
-								</td>
-							</tr>
-							<tr t-if="o.date_done and o.state == 'done'">
-								<td>
-									<span>Delivery Date</span>
-								</td>
-								<td class="text-right" t-if="o.date_done">
-									<span t-esc="o.date_done.split(' ')[0].split('-')[2] + '.' + o.date_done.split(' ')[0].split('-')[1] + '.' + o.date_done.split(' ')[0].split('-')[0]"/>
-								</td>
-							</tr>
-							<tr>
-								<td/>
-							</tr>
-						</tbody>
-					</table>
 				</div>
 			</div>
 			<h2  style="margin-bottom:25px; margin-top:25px">
@@ -261,7 +301,9 @@
 			</div>
 			<div class="oe_structure"/>
 		</div>        
-	</xpath>
+	</t>
+	</t>
+	</t>
 </template>
 
 
