[CHG] Changed header and footer to html field

--- a/equitania/views/eq_report_style.xml
+++ b/equitania/views/eq_report_style.xml
@@ -88,6 +88,11 @@
             text-decoration: underline;
             margin-bottom:0.2cm;
 	}
+
+	[data-oe-type="html"]:empty  {
+	  background-color:red!important;
+	   display:none; 
+	} 
 </template>
 </data>
 </openerp>
