[ADD] Added comment

--- a/equitania/views/eq_report_style.xml
+++ b/equitania/views/eq_report_style.xml
@@ -88,7 +88,7 @@
             text-decoration: underline;
             margin-bottom:0.2cm;
 	}
-
+	/* Removes the website content box for the reports */
 	[data-oe-type="html"]:empty  {
 	  background-color:red!important;
 	   display:none; 
