--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -106,7 +106,7 @@
 				<div class="col-xs-7 addressmargin">
 					<div class="row col-xs-12 returnaddress">
 						<h t-field="o.company_id.partner_id.name"/> -
-						<h t-field="o.company_id.partner_id.street"/> -
+						<h t-field="o.company_id.partner_id.street"/><span t-if="o.company_id.partner_id.eq_house_no"> <span t-field="o.company_id.partner_id.eq_house_no"/></span> -
 						<h t-field="o.company_id.partner_id.zip"/>
 						<h t-field="o.company_id.partner_id.city"/>
 					</div>
