--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -108,7 +108,7 @@
 					<div class="row col-xs-12 returnaddress">
 						<h t-field="o.company_id.partner_id.name"/> -
 						
-						<h t-field="o.company_id.partner_id.street"/> -
+						<h t-field="o.company_id.partner_id.street"/><span t-if="o.company_id.partner_id.eq_house_no"> <span t-field="o.company_id.partner_id.eq_house_no"/></span> -
 						
 						<h t-field="o.company_id.partner_id.zip"/>
 						<h t-field="o.company_id.partner_id.city"/>
